src/objects/Tenant__c.object
<CustomObject>
    <description>This is to capture tenant information.</description>
    <fields>
        <fullName>Notes_and_Comments__c</fullName>
        <inlineHelpText>Notes on this tenant.</inlineHelpText>
        <label>Notes and Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Tenants</relationshipLabel>
        <relationshipName>Opportunity_Tenants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Placeholder_Tenant__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tenant represents a rollup of multiple vacant or filled spaces.</inlineHelpText>
        <label>Placeholder Tenant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TenantBySqFtSortOder__c</fullName>
        <inlineHelpText>This is updated via a trigger and maintains the sort order of the Tenants in an opportunity.</inlineHelpText>
        <label>TenantBySqFtSortOder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tenant_Income__c</fullName>
        <inlineHelpText>This is the total amount of income paid by all tenants in the Property.</inlineHelpText>
        <label>Tenant Income - Annual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tenant_Lease_Type__c</fullName>
        <inlineHelpText>What type of Lease is this tenant under?</inlineHelpText>
        <label>Tenant Lease Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NNN</fullName>
                </value>
                <value>
                    <fullName>Modified Gross</fullName>
                </value>
                <value>
                    <fullName>Gross</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tenant_Square_Foot__c</fullName>
        <label>Tenant Square Foot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Tenant</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Opportunity__c</columns>
        <columns>NAME</columns>
        <columns>TenantBySqFtSortOder__c</columns>
        <columns>Tenant_Square_Foot__c</columns>
        <columns>Placeholder_Tenant__c</columns>
        <columns>Tenant_Lease_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opportunity__c</field>
            <operation>notContain</operation>
            <value>Jungle</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Tenant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tenants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>